# ayml

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  review.md  spec.md  tasks.md
.ash/: policy.yml
ayml/: Cargo.toml
ayml-core/: Cargo.toml
ayml-core/src/: directive.rs  emitter.rs  error.rs  lib.rs  value.rs
ayml-core/src/parser/: grammar.rs  mod.rs  scanner.rs
ayml-core/tests/: collections.rs  comments.rs  errors.rs  integration.rs  proptest.proptest-regressions  proptest.rs  regressions.rs  scalars.rs  spans.rs  spec_examples.rs  test_comment_blank_lines.rs  test_policy.rs
ayml-ffi/: Cargo.toml
ayml-ffi/src/: lib.rs
ayml-ffi/tests/: regressions.rs
ayml-lsp/: Cargo.toml
ayml-lsp/src/: convert.rs  locate.rs  main.rs  schema.rs
ayml-lsp/tests/: test_locate.rs
ayml-serde/: Cargo.toml
ayml-serde/examples/: policy.rs
ayml-serde/fuzz/: Cargo.toml
ayml-serde/fuzz/fuzz_targets/: fuzz_deserialize.rs  fuzz_roundtrip.rs
ayml-serde/src/: commentable.rs  commented.rs  commented_value.rs  de.rs  error.rs  fmt_helpers.rs  lib.rs  read.rs  ser.rs  value.rs
ayml-serde/tests/: commentable.rs  commented_value.rs  de_edge.rs  errors.rs  proptest.rs  proptest_commented.rs  regression.rs  roundtrip.rs
ayml/benches/: serde.rs  serde_comparison.rs
ayml/examples/: policy.rs
ayml/fuzz/: Cargo.toml
ayml/fuzz/fuzz_targets/: fuzz_deserialize.rs  fuzz_roundtrip.rs
ayml/src/: commented.rs  commented_value.rs  de.rs  error.rs  fmt_helpers.rs  lib.rs  ser.rs  value.rs
ayml/tests/: commentable.rs  commented_value.rs  de_edge.rs  errors.rs  proptest.proptest-regressions  proptest.rs  proptest_commented.rs  regression.rs  roundtrip.rs
editors/zed/: Cargo.toml  extension.toml  extension.wasm
editors/zed/languages/ayml/: config.toml
editors/zed/src/: lib.rs
files/: array_of_maps.yml  json.yml  mapping.yml  numbers.yml  policy.ayml  side-comment.yml  trailing-comment.yml
