[package]
name = "ayml"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = { version = "2.13.0", features = ["serde"] }
itoa = "1"
ryu = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
serde_bytes = "0.11"
serde_json = "1"

[[bench]]
name = "serde"
harness = false
